# video-enhance

./: .gitignore  Makefile  README.md  go.mod  main.go
internal/enhancer/: dependencies.go  dependencies_test.go  pipeline.go  pipeline_test.go  probe.go  probe_test.go  runner.go  runner_test.go  server.go  server_test.go  types.go
performance-app/: README.md  package-lock.json  package.json
performance-app/src/: app.html
performance-app/src-tauri/: Cargo.toml  tauri.conf.json
performance-app/src-tauri/src/: commands.rs  lib.rs  main.rs  notify.rs  state.rs  tray.rs
performance-app/src-tauri/src/sensors/: cpu.rs  disk.rs  gpu.rs  mem.rs  mod.rs  temp.rs
performance-app/src/lib/: Gauge.svelte  MetricCard.svelte
performance-app/src/lib/stores/: metrics.ts
performance-app/src/lib/styles/: app.css  tokens.css
performance-app/src/routes/: +page.svelte
scripts/: install-tools-linux.sh  install-tools-macos.sh  install-tools-windows.ps1  install-tools.sh
web/: app.js  index.html  styles.css
