[package]
name = "performance-monitor"
version = "0.1.0"
description = "Animated CPU/GPU/RAM/disk resource monitor with threshold notifications"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "performance_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.6"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.4.3"
tokio = { version = "1.52.3", features = ["time"] }

[target."cfg(windows)".dependencies]
nvml-wrapper = "0.12.1"
serde = "1"
wmi = "0.18.4"

